# ntfy2lsl

./: .gitignore  Cargo.toml  DOCKERFILE  README.md  build.sh
src/: main.rs
